# app/management/validate/VRevenueRule.php
@@ -12,6 +12,7 @@ class VRevenueRule extends VCommon
         "settlement_type" => "in:1,2",
         "settlement_days" => "number",
         "coupon_id" => "number",
+        "cost_assume" => "in:0,1,2",
         "sort" => "number",
         "base_type" => "in:1,2",
         "turnover_type" => "in:1,2",
@@ -27,6 +28,7 @@ class VRevenueRule extends VCommon
         "settlement_type.in" => "分账时间类型不合法",
         "settlement_days.number" => "T+N分账天数必须为数字",
         "coupon_id.number" => "优惠券ID必须为数字",
+        "cost_assume.in" => "优惠券成本承担方式不合法",
         "sort.number" => "排序必须为数字",
         "base_type.in" => "分账基数类型不合法",
         "turnover_type.in" => "阶梯营业额口径不合法",
